--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -305,7 +305,7 @@
                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ZQk-f4-zrz">
                                                 <rect key="frame" x="28.666666666666657" y="126" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="stockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="4ha-PM-oaH"/>
+                                                    <action selector="changeStockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="aBh-6Q-cWO"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
@@ -332,7 +332,7 @@
                                             <stepper opaque="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="O5s-2N-3iP">
                                                 <rect key="frame" x="28.333333333333314" y="126" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="stockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="Rkc-Js-rAO"/>
+                                                    <action selector="changeStockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="dgq-oK-Gak"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
@@ -359,7 +359,7 @@
                                             <stepper opaque="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Rcr-xr-eqz">
                                                 <rect key="frame" x="28.666666666666686" y="126" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="stockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="81j-n8-b67"/>
+                                                    <action selector="changeStockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="QOK-Xh-8QL"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
@@ -386,7 +386,7 @@
                                             <stepper opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="klA-59-Nu4">
                                                 <rect key="frame" x="28.666666666666742" y="126" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="stockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="FDz-hB-lGu"/>
+                                                    <action selector="changeStockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="phr-OV-mjg"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
@@ -413,7 +413,7 @@
                                             <stepper opaque="NO" tag="4" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="xbn-6P-grO">
                                                 <rect key="frame" x="28.666666666666742" y="126" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="stockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="beQ-oB-Bxk"/>
+                                                    <action selector="changeStockStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="OK4-hS-lKI"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
